# nutrisnap

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/nutrisnap/: __init__.py  cli.py  models.py  report.py
src/nutrisnap/analyzer/: __init__.py  food_detector.py  nutrition.py  portion.py
src/nutrisnap/database/: meals.py  usda.py
src/nutrisnap/goals/: __init__.py  advisor.py  daily.py
tests/: test_benchmark.py  test_core.py  test_goals.py  test_integration.py  test_meals.py  test_models.py  test_nutrition.py  test_portion.py  test_usda.py
